--- a/kbd_reader/CMakeLists.txt
+++ b/kbd_reader/CMakeLists.txt
@@ -1,35 +1,45 @@
 cmake_minimum_required(VERSION 3.5)
 project(kbd_reader)
 
-# Default to C99
-if(NOT CMAKE_C_STANDARD)
-  set(CMAKE_C_STANDARD 99)
-endif()
-
-# Default to C++14
-if(NOT CMAKE_CXX_STANDARD)
-  set(CMAKE_CXX_STANDARD 14)
-endif()
-
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(ament_cmake_auto REQUIRED)
+find_package(rclcpp_interfaces REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # uncomment the line when a copyright and license is not present in all source files
-  #set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # uncomment the line when this package is not in a git repo
-  #set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
+include_directories(include)
 
+ament_auto_add_libray(kbd_reader SHARED
+  src/kbd_reader.cpp
+)
+
+target_compile_features(kbd_reader PRIVATE cxx_std_17)
+ament_target_dependencies(kbd_reader rclcpp rcl_interfaces
+  std_msgs )
+target_include_directories(kbd_reader
+  PUBLIC
+  #$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  #$<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+  $<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+)
+
+add_executable(kbd_reader_node src/kbd_reader_node.cpp)
+ament_target_dependencies(kbd_reader_node rclcpp)
+target_link_libraries(kbd_reader_node kbd_reader)
+
+install(TARGETS
+  kbd_reader
+  DESTINATION lib/${PROJECT_NAME})
+
+install(TARGETS
+  kbd_reader_node
+  DESTINATION lib/${PROJECT_NAME})
+  
 ament_package()
